[gd_scene load_steps=36 format=3 uid="uid://bjxpx24hjhium"]

[ext_resource type="Script" uid="uid://dmhs5k7vemji2" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Texture2D" uid="uid://cvu86s1m2olyh" path="res://assets/player/53.png" id="2_g2els"]
[ext_resource type="PackedScene" uid="uid://bddly05kd4fys" path="res://scenes/slot.tscn" id="2_qhqgy"]
[ext_resource type="Texture2D" uid="uid://dyth85h76pxn2" path="res://assets/pickups/blue_gem.png" id="2_tuyoq"]
[ext_resource type="Texture2D" uid="uid://dm4daxos1carq" path="res://assets/ui/GUI-0-1.png" id="3_fjrip"]
[ext_resource type="Script" uid="uid://kxwsxcl8wq27" path="res://scripts/options.gd" id="4_qlg0r"]
[ext_resource type="PackedScene" uid="uid://ch182vahw3v6l" path="res://scenes/passive_slot.tscn" id="6_smehm"]
[ext_resource type="Resource" uid="uid://cu54e55xxea7u" path="res://resources/items/magnet.tres" id="7_ur7pv"]
[ext_resource type="Script" uid="uid://d4h2vrgu6k73o" path="res://scripts/chest.gd" id="9_d2wvv"]
[ext_resource type="Resource" uid="uid://cknybgoqxa0bn" path="res://resources/items/area.tres" id="9_jej6c"]
[ext_resource type="Texture2D" uid="uid://cfifvpp2j7hhh" path="res://assets/ui/Fantasy RPG (Toony) 32x32.png" id="9_y4r1p"]
[ext_resource type="Resource" uid="uid://b8j1ys4q4cx1q" path="res://resources/items/might.tres" id="10_f1ej7"]
[ext_resource type="Script" uid="uid://ca37gqhcha80m" path="res://scripts/back.gd" id="15_a8ls1"]

[sub_resource type="Gradient" id="Gradient_tuyoq"]
offsets = PackedFloat32Array(0, 0.854545, 1)
colors = PackedColorArray(0.991164, 0.991164, 0.991164, 1, 0.995421, 0.995421, 0.995421, 0.518182, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fjrip"]
gradient = SubResource("Gradient_tuyoq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qlg0r"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(320, 1, 1)
angle_min = -230.0
angle_max = 230.0
gravity = Vector3(0, 98, 0)
scale_min = 0.5
scale_max = 0.5
color_ramp = SubResource("GradientTexture1D_fjrip")

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("9_y4r1p")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("9_y4r1p")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("9_y4r1p")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("9_y4r1p")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("9_y4r1p")
region = Rect2(288, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("9_y4r1p")
region = Rect2(320, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("9_y4r1p")
region = Rect2(352, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("9_y4r1p")
region = Rect2(288, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("9_y4r1p")
region = Rect2(320, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("9_y4r1p")
region = Rect2(352, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("9_y4r1p")
region = Rect2(288, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("9_y4r1p")
region = Rect2(320, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("9_y4r1p")
region = Rect2(352, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ur7pv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}],
"loop": true,
"name": &"idle_boss_chest",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}],
"loop": false,
"name": &"open_boss_chest",
"speed": 24.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y4r1p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2wvv"]
bg_color = Color(0.721569, 0.435294, 0.313726, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.454902, 0.247059, 0.223529, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.443137)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vyb7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dqkch"]
radius = 100.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3vyb7")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Debug" type="VBoxContainer" parent="UI"]
offset_left = 20.0
offset_top = 182.0
offset_right = 109.0
offset_bottom = 259.0

[node name="Might" type="Label" parent="UI/Debug"]
unique_name_in_owner = true
layout_mode = 2
text = "Might: 0"

[node name="Armor" type="Label" parent="UI/Debug"]
unique_name_in_owner = true
layout_mode = 2
text = "Armor: 0"

[node name="Recovery" type="Label" parent="UI/Debug"]
unique_name_in_owner = true
layout_mode = 2
text = "Recovery: 0"

[node name="Gold" type="Label" parent="UI"]
unique_name_in_owner = true
offset_left = 514.0
offset_top = 45.0
offset_right = 627.0
offset_bottom = 68.0
text = "Gold : 0"
horizontal_alignment = 2

[node name="Particle" type="GPUParticles2D" parent="UI"]
process_mode = 3
visible = false
position = Vector2(320, 0)
amount = 200
texture = ExtResource("2_tuyoq")
lifetime = 1.5
process_material = SubResource("ParticleProcessMaterial_qlg0r")

[node name="Panel" type="NinePatchRect" parent="UI"]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -110.0
offset_right = 210.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_fjrip")
region_rect = Rect2(0, 0, 48, 32)
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 6

[node name="Label" type="Label" parent="UI/Panel"]
layout_mode = 0
offset_left = 180.0
offset_top = 50.0
offset_right = 252.0
offset_bottom = 73.0
text = "LEVEL UP"

[node name="Weapons" type="HBoxContainer" parent="UI"]
offset_left = 20.0
offset_top = 30.0
offset_right = 148.0
offset_bottom = 70.0

[node name="Slot" parent="UI/Weapons" instance=ExtResource("2_qhqgy")]
layout_mode = 2

[node name="Slot2" parent="UI/Weapons" instance=ExtResource("2_qhqgy")]
layout_mode = 2

[node name="Slot3" parent="UI/Weapons" instance=ExtResource("2_qhqgy")]
layout_mode = 2

[node name="PassiveItems" type="HBoxContainer" parent="UI"]
offset_left = 20.0
offset_top = 80.0
offset_right = 148.0
offset_bottom = 120.0

[node name="PassiveSlot" parent="UI/PassiveItems" instance=ExtResource("6_smehm")]
layout_mode = 2
item = ExtResource("7_ur7pv")

[node name="PassiveSlot2" parent="UI/PassiveItems" instance=ExtResource("6_smehm")]
layout_mode = 2
item = ExtResource("9_jej6c")

[node name="PassiveSlot3" parent="UI/PassiveItems" instance=ExtResource("6_smehm")]
layout_mode = 2
item = ExtResource("10_f1ej7")

[node name="XP" type="ProgressBar" parent="UI"]
unique_name_in_owner = true
offset_right = 640.0
offset_bottom = 11.0
max_value = 10.0
show_percentage = false

[node name="Level" type="Label" parent="UI/XP"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 595.0
offset_top = 20.0
offset_right = 635.0
offset_bottom = 43.0
text = "Lv 1"

[node name="Options" type="VBoxContainer" parent="UI" node_paths=PackedStringArray("weapons", "passive_items", "particles", "panel")]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_qlg0r")
weapons = NodePath("../Weapons")
passive_items = NodePath("../PassiveItems")
particles = NodePath("../Particle")
panel = NodePath("../Panel")

[node name="Chest" type="NinePatchRect" parent="UI"]
process_mode = 3
custom_minimum_size = Vector2(300, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_fjrip")
region_rect = Rect2(0, 0, 48, 32)
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 6
script = ExtResource("9_d2wvv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/Chest"]
position = Vector2(150, 112)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ur7pv")
animation = &"idle_boss_chest"
autoplay = "idle_boss_chest"

[node name="Open" type="Button" parent="UI/Chest"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -40.0
offset_right = 25.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_y4r1p")
theme_override_styles/normal = SubResource("StyleBoxFlat_d2wvv")
text = "Open"

[node name="Close" type="Button" parent="UI/Chest"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -40.0
offset_right = 25.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_y4r1p")
theme_override_styles/normal = SubResource("StyleBoxFlat_d2wvv")
text = "Close"

[node name="Rewards" type="Control" parent="UI/Chest"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="UI/Chest/Rewards"]
layout_mode = 0
offset_left = 40.0
offset_top = 115.0
offset_right = 80.0
offset_bottom = 155.0
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="UI/Chest/Rewards"]
layout_mode = 0
offset_left = 60.0
offset_top = 35.0
offset_right = 100.0
offset_bottom = 75.0
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="UI/Chest/Rewards"]
layout_mode = 0
offset_left = 130.0
offset_top = 15.0
offset_right = 170.0
offset_bottom = 55.0
expand_mode = 1
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="UI/Chest/Rewards"]
layout_mode = 0
offset_left = 200.0
offset_top = 35.0
offset_right = 240.0
offset_bottom = 75.0
expand_mode = 1
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="UI/Chest/Rewards"]
layout_mode = 0
offset_left = 220.0
offset_top = 115.0
offset_right = 260.0
offset_bottom = 155.0
expand_mode = 1
stretch_mode = 5

[node name="Back" type="Button" parent="UI"]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = 60.0
offset_right = 58.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
text = "Back to Menu"
script = ExtResource("15_a8ls1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_g2els")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3vyb7")

[node name="SelfDamage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="SelfDamage"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_g2els")

[node name="Health" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -11.0
offset_top = -42.0
offset_right = 11.0
offset_bottom = -38.0
value = 100.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Magnet" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Magnet" type="CollisionShape2D" parent="Magnet"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_dqkch")

[connection signal="pressed" from="UI/Chest/Open" to="UI/Chest" method="_on_open_pressed"]
[connection signal="pressed" from="UI/Chest/Close" to="UI/Chest" method="_on_close_pressed"]
[connection signal="pressed" from="UI/Back" to="UI/Back" method="_on_pressed"]
[connection signal="body_entered" from="SelfDamage" to="." method="_on_self_damage_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Magnet" to="." method="_on_magnet_area_entered"]
